# Sejong-University-Portal-Auth

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.playwright-mcp/: grade-network.md
docs/superpowers/plans/: 2026-03-19-sejong-portal-auth.md
docs/superpowers/specs/: 2026-03-19-sejong-portal-auth-design.md
specs/001-ts-portal-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ts-portal-auth/checklists/: requirements.md
specs/001-ts-portal-auth/contracts/: library-api.md  rest-api.md
specs/002-library-studentcard/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-library-studentcard/contracts/: library-api.md  (+1 more)
specs/003-academic-extended/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sjapp-jwt-auth/: plan.md  quickstart.md  research.md  spec.md
specs/005-sjapp-native-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: client.ts  errors.ts  http.ts  index.ts  session.ts  types.ts
src/api/: auth.ts  banners.ts  dormitory.ts  enrollments.ts  faq.ts  feeds.ts  food.ts  grades.ts  library.ts  news.ts  notices.ts  notifications.ts  photo.ts  presence.ts  qna.ts  qr.ts  schedules.ts  scholarship.ts  scholarships.ts  seatactions.ts  staff.ts  studentcard.ts  studyroom.ts  timetable.ts  tuition.ts  weather.ts
src/sejong_auth/: __init__.py  client.py  credential.py  exceptions.py  models.py
src/server/: app.ts  routes.ts
tests/: test_integration.py
tests/integration/: client.test.ts
(+11 files in other folders)
