[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sejong-auth"
version = "0.1.0"
description = "Sejong University portal authentication and grade fetching"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sejong_auth"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
